src/negative_test_cases/Testcases/empty_program.stl
%%%
The empty program should not compile becasue there is no function main. This
should be discovered in semantic checking.

%%%
